# ibis

./: .codespellrc  .commitlintrc.json  .conventionalcommits.js  .coveragerc  .dockerignore  .env  .envrc  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .isort.cfg  .landscape.yaml  .mypy.ini  .pep8speaks.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .releaserc.js  .releaserc.json  .rgignore  .taplo.toml  .yamllint.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  SF-Salary.ipynb  Untitled.ipynb  appveyor.yml  asv.conf.json  azure-pipelines.yml  circle.yml  codecov.yml  compose.yaml  conftest.py  default.nix  (+28 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  updateContent.sh
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  labeler.yml  pr-prefix-labeler.yml  renovate.json  rotate-key-template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  docs-issue.yml  feature-request.yml  new-backend.yml
.github/workflows/: assign.yml  athena.yml  auto-rebase.yml  bigquery.yml  check-generated-files.yml  check-pip-install.yml  check-setup-py.yml  ci-data.yml  ci.yml  codeql-analysis.yml  codeql.yml  conda-lock-dispatch.yml  conda-lock-pr.yml  conda-lock.yml  (+42 more)
.streamlit/: config.toml
4.0.0/: 404.html  example.sql  index.html  objects.inv  sitemap.xml  sqlalchemy_example.py
4.1.0/: 404.html  index.html  objects.inv  sitemap.xml
5.0.0/: 404.html  CNAME  example.py  index.html  objects.inv  sitemap.xml  sqlalchemy_example.py
5.1.0/: 404.html  index.html  index.md  objects.inv  sitemap.xml
6.0.0/: 404.html  index.html  objects.inv  sitemap.xml
6.1.0/: 404.html  index.html  index.md  sitemap.xml
6.2.0/: 404.html  index.html  objects.inv  sitemap.xml
7.0.0/: 404.html  CONTRIBUTING.html  index.html  install.html  presentations.html  release_notes.html  search.json  sitemap.xml  support_matrix.html  why.html
7.1.0/: 404.html  getting-started.html  index.html  listings.json  posts.html  posts.xml  release_notes.html  search.json  sitemap.xml  support_matrix.html
7.2.0/: 404.html  CONTRIBUTING.html  getting-started.html  index.html  install.html  listings.json  posts.html  posts.xml  presentations.html  release_notes.html  robots.txt  search.json  sitemap.xml  support_matrix.html  why.html
8.0.0/: 404.html  CONTRIBUTING.html  getting-started.html  index.html  install.html  listings.json  posts.html  posts.xml  presentations.html  release_notes.html  search.json  sitemap.xml  support_matrix.html  why.html
9.5.0/: 404.html  CONTRIBUTING.html  _redirects  backend_table_hiearchy.html  index.html  install.html  listings.json  posts.html  posts.xml  presentations.html  release_notes.html  release_notes_generated.html  sitemap.xml  why.html
LICENSES/: odo.txt  pandas.txt
benchmarks/: benchmarks.py
ci/: .env  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.docs  Dockerfile.miniconda  Dockerfile.old  Dockerfile.test  asvconfig.py  backends-markers.sh  backends-to-start.sh  basic_setup_env.sh  benchmark.sh  build.sh  check-services.sh  check_disallowed_imports.py  clickhouse_load.sql  cloudera.list  condarc  datamgr.py  docker-compose-windows.yml  docker-compose.test.yml  docker-compose.yml  docker_run.sh  dockerize.sh  docs.sh  feedstock.py  impalamgr.py  linked-issues.gql  load-data.sh  make_geography_db.py  mapd.conf  merge_and_update_env.sh  mysql.conf  omnisci.conf  omniscidb.conf  pytest-markers-for-services.sh  pytest_errors.sh  requirements-3.5-dev.yml  requirements-3.6-dev-omniscidb.yml  (+29 more)
ci/udf/: CMakeCache.txt  CMakeLists.txt  uda-sample.cc  uda-sample.h  udf-sample.cc  udf-sample.h
ci/udf/lib/: udf.h
conda/: environment-arm64-flink.yml  environment-arm64.yml  environment.yml
demo/: ibis-demo.qmd
dev/: genrelease.py  lockfile_diff.sh  merge-pr.py  poetry2setup  poetry2setup.py  update-datafusion.sh  update-lock-files.sh  update-polars.sh  wait_for_docker_impala.sh
docker/: Dockerfile
docs/: .gitignore  404.qmd  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README  README.md  SUMMARY.md  _publish.yml  _quarto.yml  _renderer.py  backend_info_app.py  backend_table_hiearchy.qmd  backend_table_hierarchy.qmd  backends_sankey.py  build-notebooks.py  dtypes.qmd  example.py  example.sql  fix-version-href.lua  getting_started.md  ibis-for-dplyr-users.ipynb  ibis-for-pandas-users.ipynb  ibis-for-sql-programmers.ipynb  ibis-wasm-wheels_cors_config.json  index.md  index.qmd  index.scss  install.md  install.qmd  installation.md  jupyter_lite_config.json  make.bat  mkdocs.yml  portability.excalidraw  posts.qmd  presentations-listing.json  presentations.qmd  release_notes.md  (+12 more)
docs2/: .gitignore  CONTRIBUTING.md  _quarto.yml  ai.qmd  community.qmd  getting-started.qmd  how-to.qmd  index.qmd  install.qmd  penguins.csv  penguins.parquet  posts.qmd  presentations.qmd  release_notes.qmd  support_matrix.qmd  why.qmd
ibis/: __init__.py  _tstring.py  _version.py  base_backend.py  client.py  cloudpickle.py  common.py  comms.pxd  comms.pyx  compat.py  config.py  config_init.py  conftest.py  connection.py  filesystems.py  interactive.py  io.py  selectors.py  server.py  spark_testing_client.py  tasks.py  tstring.py  uda.py  udf.py  util.py  wire.py
nix/: adbc.nix  default.nix  ibis-core.nix  ibis-local.nix  ibis.nix  overlay.nix  pyproject-overrides.nix  sources.json  sources.nix  tests.nix
patches/: aws-sdk-cpp-thread.patch  datafusion-macos.patch  gdal_2-limits.patch  watchdog-force-kqueue.patch
scripts/: airline.py  cleanup_testing_data.py  create_test_data_archive.py  fixtures.sh  ibis-env.sh  load_test_data.py  run_jenkins.sh  semaphore_perf.py  test_data_admin.py
testing/: .gitignore  datamgr.py  docker-compose.yml  impalamgr.py  load-all.sh  load-data.sh  start-all.sh
testing/udf/: CMakeLists.txt  hyperloglog-uda.cc  uda-sample-test.cc  uda-sample.cc  uda-sample.h  udf-sample-test.cc  udf-sample.cc  udf-sample.h  variance-uda.cc
testing/udf/lib/: uda-test-harness-impl.h  uda-test-harness.h  udf-debug.h  udf-test-harness.h  udf.h
(+5512 files in other folders)
